...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:components="http://schemas.android.com/tools"
    android:background="@drawable/new_back"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit"
        app:fabSize="normal"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/menu_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/ic_back_white"
...
                        android:text="@string/folder"
                        android:layout_marginTop="4dp"
                        android:textSize="16sp"
                        android:textColor="#80000000"/>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/deleteTopBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_delete_black"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="6dp"
                        android:layout_marginTop="6dp"
...
                    android:orientation="vertical">

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/title"-->
<!--                        android:labelFor="@id/title_EditText"/>-->

                    <EditText
                        android:id="@+id/title_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
...
                        android:orientation="vertical"
                        android:visibility="gone">
<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/user_name"-->
<!--                            android:labelFor="@id/username_EditText"/>-->

                        <EditText
                            android:id="@+id/username_EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name"
...
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                            <EditText
                                android:id="@+id/password_EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="start"
                                android:inputType="textPassword"
                                android:hint="@string/password"
                                android:paddingEnd="100dp"
...
                        <!--title and strength-->

                    </LinearLayout>
                    <!--website-->

                    <LinearLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">
<!--                        <TextView-->
<!--                            android:layout_width="match_parent"-->
...
                        android:background="@drawable/btn_cancel_style"
                        android:onClick="cancelWarningMessage"
                        android:src="@drawable/ic_close" />


                    <ImageButton
                        android:id="@+id/saveBtn"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_weight="8"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/btn_style"
                        android:onClick="openNewRecord"
...
