...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.records.RecordRecycler_Activity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
...
            android:text="@string/no_result_message"
            android:textColor="#CCFFFFFF"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            tools:listitem="@layout/record_item">

        </androidx.recyclerview.widget.RecyclerView>
...
