...
    <string name="custom1">custom1</string>
    <string name="custom2">custom2</string>
    <string name="custom3">custom3</string>
    <string name="addFields">+ Add Field</string>
    <string name="newRecord">New Record</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="delete">Delete</string>
    <string name="cancelation_request">Cancelation Request</string>
    <string name="cancelation_message">You have unsaved changes. Do you wish to continue?</string>
    <string name="bankAccounts">Bank Accounts</string>
...
