...
                android:id="@+id/activityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/newAccount"
                android:textColor="#fff"
                android:textSize="20sp" />


        </RelativeLayout>
        <!--Header-->
...

                </LinearLayout>
                <!--Title--> <!--Always Visible-->


                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:visibility="visible">
                    <EditText
                        android:id="@+id/email_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </LinearLayout>
                <!--email-->
...
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                            <EditText
                                android:id="@+id/password_EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="start"
                                android:inputType="textPassword"
                                android:hint="@string/masterPass"
                                android:paddingEnd="80dp"
...
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/verifyPassword_EditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="start"
                                android:inputType="textPassword"
                                android:hint="@string/verifyPass"
                                android:paddingEnd="80dp"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <ImageButton
                        android:id="@+id/patternBtn"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/pattern_icon"
                        android:layout_marginEnd="10dp"
                        android:onClick="choosePattern"/>

...
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/btn_cancel_style"
                        android:onClick="cancelWarningMessage"
                        android:src="@drawable/ic_close" />

                    <ImageButton
                        android:id="@+id/saveBtn"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_weight="8"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/btn_style"
                        android:onClick="createNewAccount"
...
